<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Schedule"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkblue"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/schedule_title"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/schedule_title"
                android:textColor="#fff"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="14dp"
                tools:text="@string/schedule_title" />

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/app_logo_white"
                tools:layout_alignParentRight="true"
                tools:layout_editor_absoluteX="173dp"
                tools:layout_editor_absoluteY="28dp"
                tools:srcCompat="@drawable/app_logo_white"
                tools:ignore="VectorDrawableCompat" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/notifications_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        tools:text="@string/notifications_text" />

    <LinearLayout
        android:id="@+id/stream_schedule"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/re_stream_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch1">

        <TextView
            android:id="@+id/shedule_lesson1_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/chedule_lesson1"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/shedule_lesson2_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/chedule_lesson2"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/shedule_lesson3_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/chedule_lesson3"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/shedule_lesson4_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/chedule_lesson4"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/shedule_lesson5_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/chedule_lesson5"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/shedule_lesson6_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/chedule_lesson6"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/shedule_lesson7_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/chedule_lesson7"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/shedule_lesson8_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/chedule_lesson8"
            android:textSize="17sp" />
        <TextView
            android:id="@+id/shedule_lesson9_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/chedule_lesson9"
            android:textSize="17sp" />
        <TextView
            android:id="@+id/shedule_lesson10_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/chedule_lesson10"
            android:textSize="17sp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/re_stream_button"
        style="@style/TextAppearance.AppCompat.Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:enabled="true"
        android:text="@string/re_stream_text"
        app:backgroundTint="@color/lightblue"
        android:textColor="@color/white"
        app:cornerRadius="1in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/re_stream_text" />

</androidx.constraintlayout.widget.ConstraintLayout>